# swisspipesp-cial

./: .env.example  .gitignore  AUDIT-SWISSPIPESP.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
docs/: RAPPORT-T3-SHADOW.md  analyse-prototype-custom-tags.md  questions-ouvertes.md
docs/adr/: ADR-0013-espaces-transverses.md  ADR-0014-journal-acces.md
docs/conception/: CONCEPTION-BASCULE-CUSTOMTAGS.md  CONCEPTION-INBOUND.md  CONCEPTION-PLAN-GLOBAL.md  CONCEPTION-SUITE-CONTRAT.md
scripts/: teardown_demo.py
swisspipe/adapters/inbound/: cli.py  composition.py
swisspipe/application/: delegation_service.py  droits_effectifs_service.py  instanciation_service.py  montage_service.py  projection_service.py  reassignation_service.py  reconciliation_service.py  role_service.py
swisspipe/core/: ruff.toml
swisspipe/core/domain/: acteurs.py  instance.py  matrice.py  modele.py  montage.py  octroi.py  ressource.py  role.py  role_affectation.py  ruff.toml  topologie.py
swisspipe/core/ports/: adaptateur_ressource.py
swisspipe/core/services/: delta_projection.py  droits_effectifs.py  reconciliation.py  renversement.py
swisspipe/persistence/: models.py
swisspipe/tests/: conftest.py  test_acteurs.py  test_adaptateur_memoire.py  test_adaptateur_nextcloud_integration.py  test_cli_transverse.py  test_contrat_adaptateur.py  test_core_purity.py  test_delegation_service.py  test_delta_projection.py  test_demontage_projection.py  test_detection_upgrade.py  test_droits_effectifs.py  test_droits_effectifs_montage.py  test_droits_effectifs_service.py  test_etat_acl_decode.py  test_inbound_cli.py  test_instance.py  test_instanciation_service.py  test_integration_l2.py  test_matrice.py  test_modele.py  test_montage.py  test_montage_persistence.py  test_montage_plafond.py  test_montage_service.py  test_octroi.py  test_persistence.py  test_persistence_transverse.py  test_plafond_par_ressource_e2e.py  test_politique.py  test_politique_persistence.py  test_projection_partielle.py  test_projection_plan.py  test_reassignation_service.py  test_reconcile_dimensionnel.py  test_reconcile_projection_service.py  test_reconciliation.py  test_reconciliation_grandeur_nature.py  test_reconciliation_service.py  test_renversement.py  (+8 more)
tools/: inventaire_prod.py  seed_depuis_prod.py
(+16 files in other folders)
